# galil-needle-insertion

./: .gitignore  README.md
docs/: getting_started.md  index.md  index.rst  inspection_commands.md  launch_files.md  position_control.md  real_velocity_controller.md  real_velocity_prerequisite.md  simons_estimated_velocity_control.md  sine_test_controller.md
galil_description/urdf/: galil.ros2_control.xacro  galil.xacro
galil_driver/: CMakeLists.txt
galil_driver/config/: galil_controllers.yaml  galil_controllers_sim.yaml
galil_driver/launch/: RSP.launch.py  mpc.launch.py
galil_driver/src/: hardware_interface.cpp
galil_test_controllers/src/: sine_real_velocity_controller.cpp
install/galil_driver/share/galil_driver/config/: galil_controllers.yaml
log/: latest_build
mp_needle_trajectory_controller/: CMakeLists.txt  mp_needle_trajectory_controller_plugin.xml  package.xml
mp_needle_trajectory_controller/include/mp_needle_trajectory_controller/: mp_needle_traj.hpp  mpc_helpers.hpp
mp_needle_trajectory_controller/src/: mp_needle_traj.cpp  mpc_helpers.cpp
needle_tip_sim/: CMakeLists.txt  package.xml
needle_tip_sim/data/: insertion_points.csv
needle_tip_sim/include/needle_tip_sim/: needle_tip_sim.hpp
needle_tip_sim/launch/: needle_tip_pub.launch.py
needle_tip_sim/src/: needle_tip_pub.cpp  needle_tip_sim.cpp
